--- a/Weather.API/Weather.API/Weather.API.csproj
+++ b/Weather.API/Weather.API/Weather.API.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Weather.PCL\Weather.PCL.csproj" />
+  </ItemGroup>
+
 </Project>
